--- a/FinalExam/credits.html
+++ b/FinalExam/credits.html
@@ -30,7 +30,7 @@ Project: Credits Page
     <ul>
       <li><a href="https://www.nba.com/thunder">External: Thunder Official Site</a></li>
       <li><a href="details.html">Internal: Detail Page</a></li>
-      <li><a href="mailto:austin@example.com">Email Link</a></li>
+      <li><a href="mailto:asmit503@stumail.jccc.edu">Email Link</a></li>
     </ul>
 	<img src="images/chet.jpg" alt="Chet Holmgren" style="width: 300px; height: auto;">
   </main>
